# dynamixel_py

./: .gitignore  README.md  pyproject.toml
dynamixel_py/: __init__.py  dynamixel_control_tables.py  dynamixel_handler.py  dynamixel_manager.py  servo_group.py  utilities.py
dynamixel_py/servos/: XL330.py
examples/: get_dxl_posiiton_both_protocols.py  get_dxl_position.py  get_servo_ids.py  servo_group_example.py  servo_group_sync_read_example.py  servo_group_sync_write_example.py  set_dxl_position.py  set_dxl_position_both_protocols.py
servos/: XL330.py
src/dynamixel_py/: __init__.py
